# rdc-cli

./: README.md  pixi.toml  pyproject.toml
.github/workflows/: aur.yml  ci.yml
docs-astro/src/data/: commands.json  replay.json
docs-astro/src/pages/docs/: remote.astro
scripts/: build_renderdoc.py  dev_install.py  ensure-renderdoc.py  gen-commands.py  gen_and_check.py  setup_vulkan_samples.py  verify_package.py
src/rdc/: _build_renderdoc.py  _platform.py  cli.py  daemon_server.py  remote_core.py
src/rdc/_skills/: SKILL.md
src/rdc/_skills/references/: commands-quick-ref.md
src/rdc/commands/: completion.py  doctor.py  remote.py  resources.py
src/rdc/vfs/: formatter.py
tests/e2e/: test_vfs.py
tests/mocks/: mock_renderdoc.py
tests/unit/: test_build_renderdoc.py  test_daemon_server_unit.py  test_doctor.py  test_pass_deps.py  test_platform.py  test_remote_setup.py  test_remote_status_disconnect.py  test_setup_vulkan_samples.py  test_vfs_commands.py  test_vfs_tree_cache.py  test_windows_compat.py
