[build-system]
requires = ["setuptools>=68", "setuptools-scm>=8", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "rdc-cli"
dynamic = ["version"]
description = "CLI for RenderDoc .rdc captures"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [{name = "Jim"}]
classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
  "Environment :: Console",
  "Topic :: Multimedia :: Graphics",
]
dependencies = [
  "click>=8.1",
  "Pillow>=10.0",
  "numpy>=1.24",
]

[project.optional-dependencies]
rich = ["rich>=13.0"]
dev = [
  "pytest>=8.0",
  "pytest-cov>=5.0",
  "mypy>=1.10",
  "ruff>=0.6",
]

[project.scripts]
rdc = "rdc.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.package-data]
"rdc._skills" = ["**/*.md"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]
pythonpath = ["src", "tests/mocks", "tests/e2e", "scripts"]
markers = [
  "gpu: requires real renderdoc module and GPU",
  "vulkan_samples: requires vulkan-samples binary for live capture testing",
]

[tool.setuptools_scm]
version_scheme = "guess-next-dev"
local_scheme = "no-local-version"

[tool.mypy]
python_version = "3.10"
strict = true
warn_unused_configs = true
warn_unused_ignores = false
